--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -5,13 +5,44 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-update-manifest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Log in to Docker hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
+      - name: Set Docker Image Tag
+        id: vars
+        run: echo "TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
       - name: Build and Push
         run: |
-          docker build -t frozenwater1/my-spring-kafka:latest .
+          docker build -t frozenwater1/my-spring-kafka:${TAG} .
+          docker push frozenwater1/my-spring-kafka:${TAG}
+          docker tag frozenwater1/my-spring-kafka:${TAG} frozenwater1/my-spring-kafka:latest
           docker push frozenwater1/my-spring-kafka:latest
+
+      # 👇 manifest repo clone
+      - name: Checkout manifest repo
+        uses: actions/checkout@v3
+        with:
+          repository: frozen-water/spring-kafka-manifest
+          path: manifest
+          token: ${{ secrets.GITHUB_TOKEN }}   # 또는 PAT
+
+      # 👇 values.yaml 수정
+      - name: Update image tag in values.yaml
+        run: |
+          sed -i "s/tag: .*/tag: ${TAG}/" manifest/my-spring-kafka/values.yaml
+
+      # 👇 commit & push
+      - name: Commit and push changes
+        run: |
+          cd manifest
+          git config user.name "frozen-water"
+          git config user.email "frozen-water@gmail.com"
+          git add my-spring-kafka/values.yaml
+          git commit -m "Update image tag to ${TAG}"
+          git push origin main
