--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -35,7 +35,7 @@ jobs:
       # 👇 values.yaml 수정
       - name: Update image tag in values.yaml
         run: |
-          sed -i "s/tag: .*/tag: ${TAG}/" manifest/my-spring-kafka/values.yaml
+          sed -i "s/tag: .*/tag: ${TAG}/" my-spring-kafka/values.yaml
 
       # 👇 commit & push
       - name: Commit and push changes
