--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Update image tag in values.yaml
         run: |
           echo $TAG
-          sed -i.bak "s/tag: .*/tag: ${TAG}/" manifest/my-spring-kafka/values.yaml
+          sed -i.bak "s/tag: .*/tag: ${{ TAG }}/" manifest/my-spring-kafka/values.yaml
           rm manifest/my-spring-kafka/values.yaml.bak
 
       - name: Commit and push changes
