github-ci.yml 수정

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -46,8 +46,8 @@ jobs:
 
       - name: Update image tag in values.yaml
         run: |
-          echo ${{ TAG }}
-          sed -i.bak "s/tag: .*/tag: ${{ TAG }}/" manifest/my-spring-kafka/values.yaml
+          echo ${{ env.TAG }}
+          sed -i.bak "s/tag: .*/tag: ${{ env.TAG }}/" manifest/my-spring-kafka/values.yaml
           rm manifest/my-spring-kafka/values.yaml.bak
 
       - name: Commit and push changes
