--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Build and Push
         run: |
           docker build -t frozenwater1/my-spring-kafka:latest .
-          docker push frozenwater1/my-spring-kafka:latest
-          docker tag frozenwater1/my-spring-kafka:latest frozenwater1/my-spring-kafka:latest
-          docker push frozenwater1/my-spring-kafka:latest
+          docker push frozenwater1/my-spring-kafka:${TAG}
+          docker tag frozenwater1/my-spring-kafka:${TAG} frozenwater1/my-spring-kafka:${TAG}
+          docker push frozenwater1/my-spring-kafka:${TAG}
 
       - name: Save TAG for next job
         run: echo "TAG=${TAG}" >> $GITHUB_ENV
