--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -22,8 +22,7 @@ jobs:
 
       - name: Build and Push
         run: |
-          docker build -t frozenwater1/my-spring-kafka:${GITHUB_SHA::7} -t frozenwater1/my-spring-kafka:latest .
-          docker push frozenwater1/my-spring-kafka:${GITHUB_SHA::7}
+          docker build -t frozenwater1/my-spring-kafka:latest .
           docker push frozenwater1/my-spring-kafka:latest
 
       - name: Save TAG for next job
