docker image tag latest 테스트 : values image tag와 docker push tag를 맞춰줘야함

--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -22,8 +22,8 @@ jobs:
 
       - name: Build and Push
         run: |
-          docker build -t frozenwater1/my-spring-kafka:latest .
-          docker push frozenwater1/my-spring-kafka:latest
+          docker build -t frozenwater1/my-spring-kafka:${GITHUB_SHA::7} .
+          docker push frozenwater1/my-spring-kafka:${GITHUB_SHA::7}
 
       - name: Save TAG for next job
         run: echo "TAG=${TAG}" >> $GITHUB_ENV
